--- a/mta.yaml
+++ b/mta.yaml
@@ -25,6 +25,8 @@ modules:
           srv-url: ${default-url}
     requires:
       - name: cap-products-db
+      - name: cap-products-auth
+      - name: cap-products-destination
 
   - name: cap-products-db-deployer
     type: hdb
@@ -34,9 +36,45 @@ modules:
     requires:
       - name: cap-products-db
 
+  - name: cap-products
+    type: approuter.nodejs
+    path: app/router
+    parameters:
+      keep-existing-routes: true
+      disk-quota: 256M
+      memory: 256M
+    requires:
+      - name: srv-api
+        group: destinations
+        properties:
+          name: srv-api # must be used in xs-app.json as well
+          url: ~{srv-url}
+          forwardAuthToken: true
+      - name: cap-products-auth
+      - name: cap-products-destination
+    provides:
+      - name: app-api
+        properties:
+          app-protocol: ${protocol}
+          app-uri: ${default-uri}
+
 resources:
   - name: cap-products-db
     type: com.sap.xs.hdi-container
     parameters:
       service: hana
       service-plan: hdi-shared
+  - name: cap-products-auth
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: xsuaa
+      service-plan: application
+      path: ./xs-security.json
+      config:
+        xsappname: cap-products-${org}-${space}
+        tenant-mode: dedicated
+  - name: cap-products-destination
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: destination
+      service-plan: lite
